--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,5 +41,62 @@
         }
     }
 
+    .mobile-nav {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        z-index: 10;
+        @apply p-4 pt-16;
+        // @apply items-center;
+        // @apply justify-center;
+        // @apply overflow-y-auto;
+        @apply transition;
+
+        &::before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            height: 100%;
+            width: 100%;
+            background: url('/gradients/blue-pink.png');
+            background-size: 400% 400%;
+            opacity: 0.4;
+            animation: gradientMove 5s ease infinite;
+        }
+
+        ul {
+            li {
+                @apply my-6;
+
+                a {
+                    @apply font-outfit;
+                    @apply py-3;
+                    @apply text-body;
+                    @apply text-ink
+                }
+            }
+        }
+    }
+
+    @keyframes gradientMove {
+        0% {
+            background-position: 61% 0%
+        }
+
+        50% {
+            background-position: 40% 80%
+        }
+
+        100% {
+            background-position: 61% 0%
+        }
+    }
+
 
 }
