--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -115,5 +115,14 @@
         }
     }
 
+    .project-card {
+        display: block;
+        position: relative;
+        border: 2px solid black;
+        border-radius: 8px;
+        box-shadow: 0px 4px 4px #EFE3ED;
+        background: white;
+    }
+
 
 }
