--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -143,4 +143,48 @@ html {
         }
     }
 
+    .quick-link {
+        h2 {
+            background: transparent;
+
+            svg {
+                transition: all 0.4s ease-out;
+                @apply text-ink
+            }
+        }
+
+        .hover-arrow {
+            opacity: 0;
+            transform: translateY(4px) rotate(45deg);
+            transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
+        }
+
+        &:hover {
+            h2 {
+                background: url('/gradients/blue-pink.png');
+                background-size: 100%;
+                -webkit-background-clip: text;
+                -moz-background-clip: text;
+                background-clip: text;
+                color: transparent;
+                animation: gradientMove 2s ease infinite;
+                transition: all 0.4s ease-out;
+
+                svg {
+                    color: #E16CBE;
+                }
+            }
+
+            .hover-arrow {
+                opacity: 1;
+                transform: translateY(0px) rotate(0deg);
+
+                path {
+                    transition: all 0.4s ease-out;
+                    stroke: #C85CE7;
+                }
+            }
+        }
+    }
+
 }
