--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,6 +44,43 @@ html {
         }
     }
 
+    .desktop-nav {
+        @apply flex items-center;
+        @apply font-outfit;
+        @apply text-ink;
+        font-size: 14px;
+        text-transform: uppercase;
+
+        ul {
+            display: flex;
+            column-gap: 1rem;
+
+            li {
+                a {
+                    background: transparent;
+
+                    svg {
+                        display: none;
+                    }
+                }
+
+                &:hover {
+                    a {
+                        background: url('/gradients/blue-pink.png');
+                        background-size: 100%;
+                        -webkit-background-clip: text;
+                        -moz-background-clip: text;
+                        background-clip: text;
+                        color: transparent;
+                        animation: gradientMove 2s ease infinite;
+                        transition: 0.2s ease-out;
+
+                    }
+                }
+            }
+        }
+    }
+
     .mobile-nav {
         position: fixed;
         display: flex;
@@ -56,7 +93,13 @@ html {
         background: white;
         @apply p-4 pt-16;
         @apply transition;
-        animation: navFadeIn 0.3s ease-in-out forwards;
+        pointer-events: none;
+        opacity: 0;
+
+        &.nav-open {
+            pointer-events: auto;
+            animation: navFadeIn 0.3s ease-in-out forwards;
+        }
 
         &::before {
             content: "";
