--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -179,6 +179,10 @@ html {
             transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
         }
 
+        span:nth-of-type(2) {
+            transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
+        }
+
         &:hover {
             border-color: #E16CBE !important;
             box-shadow: 0px 0px 0px #EFE3ED;
@@ -197,7 +201,6 @@ html {
             span:nth-of-type(2) {
                 opacity: 0;
                 transform: translateY(4px);
-                transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
             }
 
             .hover-arrow {
