--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -289,4 +289,55 @@ html {
         background: yellow;
         height: 70vh;
     }
+
+    @keyframes shadowMove {
+        0% {
+            transform: translate(0%, 0%);
+            filter: hue-rotate(0deg);
+        }
+
+        25% {
+            transform: translate(100%, 0%);
+            filter: hue-rotate(90deg);
+        }
+
+        75% {
+            transform: translate(-100%, 0%);
+            filter: hue-rotate(270deg);
+        }
+
+        100% {
+            transform: translate(0%, 0%);
+            filter: hue-rotate(360deg);
+        }
+    }
+
+    .card-shadow {
+        box-shadow: 0px 4px 8px #EFE3ED;
+        position: relative;
+
+        // &::after {
+        //     content: "";
+        //     $size: 140px;
+        //     position: absolute;
+        //     height: $size;
+        //     width: $size;
+        //     top: calc(50% - calc(#{$size} / 2));
+        //     left: calc(50% - calc(#{$size} / 2));
+        //     opacity: 1;
+        //     z-index: -1;
+        //     background: radial-gradient(#EFE3ED, transparent);
+        //     animation: shadowMove 0.8s linear infinite;
+        // }
+
+        &:active {
+            box-shadow: 0px 2px 4px #EFE3ED;
+        }
+
+        // &:hover {
+        //     &::after {
+        //         opacity: 1;
+        //     }
+        // }
+    }
 }
