--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -190,60 +190,6 @@ html {
         }
     }
 
-    .project-card {
-        display: block;
-        position: relative;
-        border: 2px solid black;
-        border-radius: 8px;
-        box-shadow: 0px 4px 4px #EFE3ED;
-        background: white;
-        transition: box-shadow 0.1s ease-out, border-color 0.4s ease-out;
-
-        .hover-arrow {
-            position: absolute;
-            @apply top-4;
-            @apply right-4;
-            opacity: 0;
-            transform: translateY(4px) rotate(45deg);
-            transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
-        }
-
-        span:nth-of-type(2) {
-            transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
-        }
-
-        &:hover {
-            border-color: #E16CBE !important;
-            box-shadow: 0px 0px 0px #EFE3ED;
-
-            span:first-of-type {
-                background: url('/gradients/blue-pink.png');
-                background-size: 100%;
-                -webkit-background-clip: text;
-                -moz-background-clip: text;
-                background-clip: text;
-                color: transparent;
-                animation: gradientMove 2s ease infinite;
-                transition: all 0.4s ease-out;
-            }
-
-            span:nth-of-type(2) {
-                opacity: 0;
-                transform: translateY(4px);
-            }
-
-            .hover-arrow {
-                opacity: 1;
-                transform: translateY(0px) rotate(0deg);
-
-                path {
-                    transition: all 0.4s ease-out;
-                    stroke: #C85CE7;
-                }
-            }
-        }
-    }
-
     .project-prose {
         @apply text-ink;
 
@@ -257,50 +203,6 @@ html {
 
         p {
             @apply text-body mb-8
-        }
-    }
-
-    .quick-link {
-        h2 {
-            background: transparent;
-
-            svg {
-                transition: all 0.4s ease-out;
-                @apply text-ink
-            }
-        }
-
-        .hover-arrow {
-            opacity: 0;
-            transform: translateY(4px) rotate(45deg);
-            transition: all 0.4s cubic-bezier(0, .71, .44, 1.4);
-        }
-
-        &:hover {
-            h2 {
-                background: url('/gradients/blue-pink.png');
-                background-size: 100%;
-                -webkit-background-clip: text;
-                -moz-background-clip: text;
-                background-clip: text;
-                color: transparent;
-                animation: gradientMove 2s ease infinite;
-                transition: all 0.4s ease-out;
-
-                svg {
-                    color: #E16CBE;
-                }
-            }
-
-            .hover-arrow {
-                opacity: 1;
-                transform: translateY(0px) rotate(0deg);
-
-                path {
-                    transition: all 0.4s ease-out;
-                    stroke: #C85CE7;
-                }
-            }
         }
     }
 
@@ -334,9 +236,28 @@ html {
         }
     }
 
+    @keyframes cardPopUp {
+        0% {
+            box-shadow: 0px 0px 0px #EFE3ED;
+        }
+
+        100% {
+            box-shadow: 0px 4px 8px #EFE3ED;
+        }
+    }
+
     .card-shadow {
-        box-shadow: 0px 4px 8px #EFE3ED;
+        // box-shadow: 0px 4px 8px #EFE3ED;
         position: relative;
+        animation: 0.2s ease-out cardPopUp forwards;
+        animation-delay: 0.6s;
+
+        // @for $i from 1 through 8 {
+        //     &:nth-of-type(#{$i}) {
+        //         animation-delay: calc(0.2s * $i);
+        //     }
+        // }
+
 
         // &::after {
         //     content: "";
