--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@
 
 html {
     @apply text-ink;
-    @apply font-inter
+    @apply font-inter;
 }
 
 @layer base {
@@ -20,10 +20,10 @@ html {
         position: relative;
         @apply h-14 w-14;
 
-        >.hamburger-btn__line {
+        > .hamburger-btn__line {
             display: block;
             position: absolute;
-            height: 3px;
+            height: 2px;
             width: 16px;
             @apply bg-ink;
             top: calc(50% - 1px);
@@ -40,7 +40,7 @@ html {
         }
 
         &.active {
-            >.hamburger-btn__line {
+            > .hamburger-btn__line {
                 &:nth-of-type(1) {
                     transform: translateY(0px) rotate(45deg);
                 }
@@ -54,10 +54,10 @@ html {
 
     .desktop-nav {
         @apply flex items-center;
-        @apply font-outfit;
+        @apply font-inter font-semibold;
         @apply text-ink;
         font-size: 14px;
-        text-transform: uppercase;
+        // text-transform: uppercase;
 
         ul {
             display: flex;
@@ -77,7 +77,6 @@ html {
                 &:hover {
                     a {
                         @apply text-flamingo;
-
                     }
                 }
             }
@@ -128,13 +127,13 @@ html {
         opacity: 0;
         @apply text-flamingo;
 
-        >ul {
+        > ul {
             li {
                 @apply my-4;
 
                 a {
                     @apply flex gap-x-2;
-                    @apply text-body text-flamingo font-outfit;
+                    @apply text-body text-flamingo font-inter font-semibold;
                     @apply py-2;
                     // transform: translateY(4px);
                     // opacity: 0;
@@ -147,12 +146,11 @@ html {
             pointer-events: auto;
             animation: navFadeIn 0.2s ease-in-out forwards;
 
-            >ul {
+            > ul {
                 li {
                     a {
                         // transform: translateY(0px);
                         // opacity: 1;
-
                     }
                 }
             }
@@ -168,7 +166,7 @@ html {
         //     }
         // }
 
-        >.social-nav {
+        > .social-nav {
             opacity: 0;
             animation: navFadeIn 0.3s ease-in-out forwards;
             animation-delay: 0.3s;
@@ -176,20 +174,19 @@ html {
     }
 
     header {
-        +main {
+        + main {
             transform-origin: top;
             transition: 0.3s cubic-bezier(1, 0.31, 0, 1.15);
         }
 
         &.nav-open {
-            +main {
+            + main {
                 transform: scale(0.95);
                 filter: blur(2px);
                 opacity: 0;
             }
         }
     }
-
 }
 
 @layer utilities {
@@ -222,11 +219,11 @@ html {
 
     @keyframes cardPopUp {
         0% {
-            box-shadow: 0px 0px 0px #EFE3ED;
+            box-shadow: 0px 0px 0px #efe3ed;
         }
 
         100% {
-            box-shadow: 0px 4px 8px #EFE3ED;
+            box-shadow: 0px 4px 8px #efe3ed;
         }
     }
 
@@ -241,7 +238,6 @@ html {
         //         animation-delay: calc(0.2s * $i);
         //     }
         // }
-
 
         // &::after {
         //     content: "";
@@ -258,7 +254,7 @@ html {
         // }
 
         &:active {
-            box-shadow: 0px 2px 4px #EFE3ED;
+            box-shadow: 0px 2px 4px #efe3ed;
         }
 
         // &:hover {
